--- a/package.json
+++ b/package.json
@@ -8,5 +8,8 @@
   "scripts": {
     "dev": "parcel index.html",
     "build": "parcel build index.html"
+  },
+  "devDependencies": {
+    "parcel": "^2.0.0-alpha.3.2"
   }
 }
